--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
         <section class="love-note-container">
             <div class="love-note-text">
                 <h2>To My Beloved</h2>
-                <p> Geçirdiğimiz zaman, oynadığımız oyunlar, tartıştığımız sorular. Hepsi bütünüyle bizi oluşturuyor.
-                    Sana olan o hislerimi ve seninle olan ilişkimi tanımlamak çok zor.
-                    Beraber yaptğımız her şey bana aynı hissi veriyor. Sen sanki Benim vücudumdaki bakterilerin antibiyotiğisin.
-                    Stardew Valley'de beraber çiftlik kurmak, Outlast'da beraber korkmak, Minectaft'ta birlikte yaratmak, birlikte fotoğraflar çekmek, birlikte yemek yapmak, birlikte yemek, birlikte ağlamak, birlikte gülmek, birlikte mutlu olmak, birlikte üzülmek.
-                    Hepsi bence bizi biribirimize ait kılan şeylerdi.
+                <p>
+                    Zaman geçtikçe daha çok anlıyorum: bazı insanlar hayata sadece uğramaz, iz bırakır. Sen, benim hayatımda iz değil, bir yol oldun. Yanındayken hiçbir şey yapmasak bile anlamlı geliyor her şey. Çünkü seninle olmak, sıradanı bile özel hale getiriyor bana.
                     <br/><br/>
-                    Kaleiçindeki adama karşı olan o merhametin, dışarıdaki o evsiz kediyi sahiplenmen, diğerleri gibi farklı olmaya çalışmadan farklı olabilmen, hayatta her zaman tutunabilecek bir dal olduğunu hatırlatman... Seni sen yapan ve O seni sevmemi sağlayan şeylerden...
+                    Seninle kurduğumuz her cümle, her bakış, her kahkaha... Hepsi bir bütünün parçası oldu. Birlikte yürüdüğümüz bu yolda öyle çok şey öğrendim ki. Belki de en önemlisi, gerçek sevginin sakin ama güçlü olduğunu gördüm. Göstere göstere değil, hissettire hissettire sevdiğini öğrendim ve gerçek bir "Aşk" tanımı aldım senden.
+                    <br/><br/>
+                    Senin yanında ne rol yapıyorum, ne de saklanıyorum. Olduğum gibiyim seninleyken. Belki de bu yüzden bu kadar çok seviyorum seni. Her şeyinle, olduğun gibi.
                     <br/>
+                    Geçirdiğimiz her an için teşekkür ederim. 💌
                     <br/><br/>
-                    Toparlamak gerekirse... Zaten bildiğin üzere; seni seviyorum, sevdim, seveceğim.
+                    <span class="dancing-text">Big moves with big love for big hearts.</span>
                 </p>
             </div>
             <div class="romantic-gallery">
