--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <img src="assets/foto8.jpg" alt="Galeri Resim" loading="lazy">
             </div>
             <div class="gallery-item">
-                <img src="assets/foto9.jpg" alt="Galeri Resim" loading="lazy">
+                <img src="assets/foto9.png" alt="Galeri Resim" loading="lazy">
             </div>
             <div class="gallery-item">
                 <img src="assets/foto10.jpg" alt="Galeri Resim" loading="lazy">
