Change some musics, change some info

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="about-content" data-section="who">
                 <h2 class="about-title">Ben Kimim?</h2>
                 <div class="title-underline"></div>
-                <p class="about-text">Ben Kaan, 18 yaşındayım ve acemi bir geliştiriciyim. Antalya'da yaşıyorum aynı zamanda sayısal bölümü 12. Sınıf öğrencisiyim.</p>
+                <p class="about-text">Ben Kaan, 18 yaşındayım ve acemi bir geliştiriciyim. Antalya'da yaşıyorum, öğrenciyim.</p>
                 <div class="next-section">↓</div>
             </div>
         </div>
